# mcvideo

./: .gitignore  Cargo.toml  README.md
scripts/: download_textures.py
src/: ditherer.rs  main.rs  texture.rs
