[package]
name = "mcvideo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datapack = "1.0.2"
image = "0.24.2"
rayon = "1.5.3"
once_cell = "1.12.0"
named-binary-tag = "0.6.0"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }